--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native-stack": "^6.5.0",
+    "@react-navigation/stack": "^6.1.1",
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-modal": "^13.0.1"
+    "react-native-modal": "^13.0.1",
+    "react-native-safe-area-context": "^4.2.1",
+    "react-native-screens": "^3.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.7",
